[tool.poetry]
name = "ytdlp-server"
version = "1.0.0"
description = "A FastAPI server to interact with yt-dlp on Render."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11" 
fastapi = "^0.110.0" 
uvicorn = {extras = ["standard"], version = "^0.29.0"} # ASGIサーバー
yt-dlp = "^2024.04.09" # yt-dlp本体

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
