[tool.poetry]
name = "ytdlp-server"
version = "1.0.0"
description = "A FastAPI server to interact with yt-dlp on Render."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# ↓↓↓ この行を追加する ↓↓↓
package-mode = false
# ↑↑↑ この行を追加する ↑↑↑

[tool.poetry.dependencies]
python = "^3.11" 
fastapi = "^0.120.4" 
uvicorn = {extras = ["standard"], version = "^0.38.0"} # ASGIサーバー
yt-dlp = "^2025.10.22" # yt-dlp本体

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
